header, footers and project pages are redesigned

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -1,1 +1,37 @@
-<app-base-page></app-base-page>>
+<app-base-page></app-base-page>
+  <!--File Name: aboutme page of Assignment01
+Name: Syed Nasir Gohary
+StudentID: 300937424
+Date: 2019-02-16--->
+<div class="container">
+    <div class="row">
+
+        <div class="col-lg-4 mb-2">
+            <div class="card h-100 text-center">
+                <img class="img-fluid rounded mb-2" src="/assets/images/nasir.jpeg" alt="image of person">
+              </div>
+        </div>
+        <div class="col-lg-6 mb-20">
+            <h2>Personal Information</h2>
+             <h5>Name: Syed Nasir Gohary </h5>
+             <p>I am studying Software Engineering and Technology in Centennial College. I like coding and I see developers as a problem solvers. I enjoyed working in short term project. It is a different exprience while working in a real time project. It is fun and everyday there are new learning opportunity</p>
+             <a href="/assets/images/ResumeSyedNasirGohary.pdf" class="btn btn-primary">View My Resume</a>
+           </div>
+     </div>
+     <div class="wrapper">
+        <div class="border col-md-8">
+            <h5>My favourite Sports are: </h5>
+            <ul>
+                <li>Football</li>
+                <li>Hockey</li>
+                <li>BasketBall</li>
+              </ul>
+        </div>
+        <div class="border col-md-8">
+            <h4>I can be reache in followings</h4>
+            <a href="https://twitter.com/GSnacir"><i class="fab fa-5x fa-twitter-square"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://www.linkedin.com/in/nasir-gohary/"><i class="fab fa-5x fa-linkedin"></i> </a>
+        </div>
+      </div>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</div>
