--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,18 +1,20 @@
 <app-base-page></app-base-page>
 <div class="container">
   <div class="jumbotron">
-    <h2>Your idea and our solution will goes along the way</h2>
-    <div>
-      <div class="fixed">
-        <a class="btn btn-primary" href="/contact" role="button"
-          ><i class="fa fa-lg fa-phone-square"></i> Contact Me</a
-        >
+      <h2>Your idea and our solution will goes along the way</h2>
+      <div class="wrapper">
+        <div class="right">
+            <a class="btn btn-primary" href="/contact" role="button"
+            ><i class="fa fa-lg fa-phone-square"></i> Contact Me</a
+          >
+        </div>
+
+        <div class="left">
+            <a class="btn btn-primary" href="/about" role="button"
+            ><i class="fa fa-lg fa-info"></i> About Me</a
+          >
+        </div>
+
       </div>
-      <div class="flex-item">
-        <a class="btn btn-primary" href="/about" role="button"
-          ><i class="fa fa-lg fa-info"></i> About Me</a
-        >
-      </div>
-    </div>
   </div>
 </div>
