--- a/client/src/app/pages/products/products.component.html
+++ b/client/src/app/pages/products/products.component.html
@@ -1,1 +1,69 @@
-<app-base-page></app-base-page>>
+<app-base-page></app-base-page>
+<div class="container">
+  <div class="jumbotron">
+<div class="main">
+  <br>
+  <h2>Following are the Projects I enjoyed working !!</h2>
+  <!-- Portfolio Gallery Grid -->
+  <div class="row">
+    <div class="column">
+      <div class="content">
+        <img src="assets/images/weHire.PNG" alt="project image of we hire" height="40%" style="width:100%">
+        <h3>ASP.NET Recruitement Portal</h3>
+        <p>Worked on a recruitement portal and website was deployed into AWS. I was responsible for documentations of this website. I was involved in initial designing too</p>
+      </div>
+    </div>
+  <!--Video toturail webpage-->
+    <div class="column">
+      <div class="content">
+      <img src="assets/images/videoToturial.PNG" alt="Video toturail image" style="width:100%">
+        <h3>ASP.NET Video Toturial Portal</h3>
+        <p>A fully functional ASP.NET website for video streaming,
+        developed and deployed to AWS service. I did the ERD diagram desing
+         and coded search functionality of the project.</p>
+      </div>
+    </div>
+    <hr color="red">
+  <!-- END GRID -->
+  </div>
+  <!-- Farmers Android app -->
+  <div class="row">
+    <div class="column">
+      <div class="content">
+        <img src="/assets/images/FormeHome.PNG" alt="project image of we hire" height="10%" style="width:30%"> &nbsp; &nbsp;
+        <img src="/assets/images/login.PNG" alt="project image of we hire" height="10%" style="width:30%"> &nbsp; &nbsp;
+          <img src="/assets/images/homeFormers.PNG" alt="project image of we hire" height="10%" style="width:30%">
+        <h3>Android App for Farming</h3>
+        <p>An android application for farmers. The intentions of this app is to increase the farming productivity </p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="/assets/images/login.PNG" alt="image of login page" height="5%" style="width:30%"> &nbsp;
+      <img src="/assets/images/registration.PNG" alt="image of registration page" height="8%" style="width:30%"> &nbsp;
+      <img src="/assets/images/reservation.PNG" alt="image of reservation page" height="8%" style="width:30%">
+        <h3>Android App for Parking</h3>
+        <p>Android app for reservation of parking spot in Toronto.</p>
+      </div>
+    </div>
+    <hr color="red">
+  <!-- END GRID -->
+  </div>
+  <div class="content">
+  <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="/assets/images/restaurant.PNG" alt="restaurant menu image" style="width:50%" height="10%">
+    <h3>Restaurant Menu in C#</h3>
+    <p>Menu for restaurants where customers have the options of selecting food and beverages. It was an assignment of ProgrammingIII</p>
+  </div>
+  <br>
+  <br>
+  <!-- END MAIN -->
+  </div>
+  </div>
+</div>
+
+
