--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -1,3 +1,4 @@
 <div class="navbar fixed-bottom navbar-light bg-light">
-  <h6>&copy; Copyright {{ year }}. All Rights Reserved</h6>
+  <h6>&copy; Copyright {{ year }}. Assignment02</h6>
 </div>
+
