--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/">COMP308</a>
+  <a class="navbar-brand" routerLink="/"><img src="/assets/images/logo.png" height="50px"></a>
   <button
     class="navbar-toggler"
     type="button"
@@ -16,18 +16,18 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/"
-          ><i class="fas fa-lg fa-igloo"></i> Home
+          ><i class="fas fa-lg fa-home"></i> Home
       </a
         >
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about"
-          ><i class="fa fa-lg fa-info"></i> About</a
+          ><i class="fa fa-lg fa-info-circle"></i> About</a
         >
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/products"
-          ><i class="fa fa-lg fa-briefcase"></i> Products</a
+          ><i class="fa fa-lg fa-product-hunt"></i> Projects</a
         >
       </li>
       <li class="nav-item">
@@ -54,3 +54,5 @@
     </ul>
   </div>
 </nav>
+
+
