Service pages contenet is designed

--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -27,12 +27,12 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/products"
-          ><i class="fa fa-lg fa-product-hunt"></i> Projects</a
+          ><i class="fab fa-lg fa-product-hunt"></i> Projects</a
         >
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/services"
-          ><i class="fa fa-lg fa-birthday-cake"></i> Services</a
+          ><i class="fa fa-lg fa-universal-access"></i> Services</a
         >
       </li>
       <li class="nav-item">
