--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -1,1 +1,60 @@
-<app-base-page></app-base-page>>
+<app-base-page></app-base-page>
+<!-- Portfolio Section -->
+
+<div class="divMain">
+  <h2>I am providing services in the following:</h2>
+  <br>
+  <div class="row">
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="card h-100">
+        <a href="#"
+          ><img class="card-img-top" src="/assets/images/aspnet.jpg" alt=""
+        /></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Asp.Net</a>
+          </h4>
+          <p class="card-text">
+            I have worked with a team where we developed two project in Asp.Net
+            MVC5. The first projects was about job portal. Jobseekers were
+            allowed to create account and upload their resume. The second
+            project was an online tutorials website. It was a streaming web
+            where user would have registered to learn new programs on trends.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="/assets/images/andriod.png" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Android Studio</a>
+            </h4>
+            <p class="card-text">I have excellent skills in android studio. I have developed more then four project in
+              Android Studio. Online Book Store, Parking and app for farmers are some of those applications where recieved
+              excellent feedbacks from my professors</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="/assets/images/nodejs.png" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Node.js and Express Node</a>
+              </h4>
+              <p class="card-text">Learning the type scripting in Emerging Technologies. I like nodejs, because Node is used
+                for developing applications that make heavy use of the ability to run JavaScript both on the client, as well
+                as on server side and therefore benefit from the re-usability of code. </p>
+            </div>
+          </div>
+        </div>
+  </div>
+  <br />
+  <br />
+  <br />
+</div>
