--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -37,7 +37,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/contact"
-          ><i class="fa fa-lg fa-phone"></i> Contact</a
+          ><i class="fas fa-lg fa-phone-square"></i> Contact</a
         >
       </li>
 
