documentation for each css file is done

--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -1,4 +1,17 @@
 <app-base-page></app-base-page>
+
+<div id="personalAddress" class="col-sm-6 col-sm-offset-3">
+  <div class="panel panel-default text-center">
+
+      <h4>Name: Syed Nasir Gohary</h4>
+      <h4>Address: 941 Progress Avenue</h4>
+      <h4>Email: syednacer@gmail.com</h4>
+      <h4>Hours: 0900-1730</h4>
+      <h4>Cell: 4168300378</h4>
+  </div>
+</div>
+
+<h3>Only registered user can view contact list</h3>
 <div *ngIf="isLoggedIn()" class="container">
   <div class="row">
     <div class="col col-md-6">
