--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,7 +1,8 @@
-<main class="container">
+<main id="loginForm">
+    <h1>Please Login</h1>
   <div class="row">
       <div class="col-md-offset-4 col-md-4">
-          <h1>Please Login</h1>
+
           <form autocomplete="off" (submit)="onLoginSubmit()">
               <fieldset class="form-group">
                   <label for="username">Username:</label>
@@ -21,6 +22,7 @@
               </fieldset>
               <fieldset class="form-group text-right">
                   <input type="submit" class="btn btn-success" value="Login">
+                  &nbsp;
                   <a routerLink="/home">
                       <input type="button" class="btn btn-warning" value="Cancel">
                   </a>
