--- a/client/src/app/pages/about/about.component.css
+++ b/client/src/app/pages/about/about.component.css
@@ -1,3 +1,11 @@
+/*
+Student Name: Syed Nasir Gohary
+Student ID: 300937424
+Description: Assignment2
+Date: 04/05,2019
+Reference: Tom Tsiliopoulos's Class Demo, Github Repo's
+All codes are taken from Tom Tsiliopoulos's classes and demos
+*/
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
