Internet documentation is done. favourite model is removed

--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -1,3 +1,8 @@
+<!--File Name: aboutme page of Assignment02
+Name: Syed Nasir Gohary
+StudentID: 300937424
+Date: 2019-04-05
+Some of the content are taken from Week10 Demo--->
 <app-base-page></app-base-page>
 
 <div id="personalAddress" class="col-sm-6 col-sm-offset-3">
