--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -1,3 +1,13 @@
+<!--
+Student Name: Syed Nasir Gohary
+Student ID: 300937424
+Description: Assignment2
+Date: 04/05,2019
+Reference: Tom Tsiliopoulos's Class Demo, Github Repo's
+All codes are taken from Tom Tsiliopoulos's classes and demos
+
+-->
+
 <app-base-page></app-base-page>
 <!-- Portfolio Section -->
 
