--- a/client/src/app/pages/contact/contact.component.css
+++ b/client/src/app/pages/contact/contact.component.css
@@ -33,4 +33,15 @@ h3{
   text-transform: uppercase;
 }
 
+#contacts {
+  width:450px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 3em;
+   /*set to a negative number 1/2 of your width*/
+  border: 2.5px ridge rgb(119, 190, 228);;
+  border-radius: 5px;
+  background-color: #70f870;
 
+}
