--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
-<main id="loginForm">
-    <h1>Please Login</h1>
+<div id="login" >
+    <h1>Login here</h1>
   <div class="row">
       <div class="col-md-offset-4 col-md-4">
 
@@ -21,13 +21,13 @@
                   <a routerLink="/register">Register Here</a>
               </fieldset>
               <fieldset class="form-group text-right">
-                  <input type="submit" class="btn btn-success" value="Login">
+                  <input type="submit" class="btn btn-success" value="Login" id="btnLogin">
                   &nbsp;
                   <a routerLink="/home">
-                      <input type="button" class="btn btn-warning" value="Cancel">
+                      <input type="button" class="btn btn-warning" value="Cancel" id="btnCancel">
                   </a>
               </fieldset>
           </form>
       </div>
   </div>
-</main>
+</div>
