--- a/client/src/app/pages/register/register.component.css
+++ b/client/src/app/pages/register/register.component.css
@@ -6,3 +6,72 @@ Date: 04/05,2019
 Reference: Tom Tsiliopoulos's Class Demo, Github Repo's
 All codes are taken from Tom Tsiliopoulos's classes and demos
 */
+#registration {
+  width:500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 3em;
+  background: rgb(0, 167, 255);
+  background-color: #70f870;
+
+  /*set to a negative number 1/2 of your width*/
+  border: 2.5px ridge rgb(0, 167, 255);;
+  border-radius: 5px;
+}
+h4{
+  padding-top: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+}
+h1{
+  text-align: center;
+  padding-top: 5px;
+  text-transform: uppercase;
+}
+fieldset{
+  padding: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 400px;
+
+}
+
+label{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  font-kerning: 18px;
+
+}
+#btnSubmit{
+
+  padding: 10px 10px;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px rgb(199, 193, 193);
+  width: 150px;
+  text-transform: uppercase;
+  font-weight: bold;
+  float: left;
+  background-color: gray;
+
+}
+#btnCancel{
+  padding: 10px 10px;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px rgb(199, 193, 193);
+  width: 150px;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: khaki;
+  float: right;
+}
