--- a/client/src/app/pages/login/login.component.css
+++ b/client/src/app/pages/login/login.component.css
@@ -1,3 +1,11 @@
+/*
+Student Name: Syed Nasir Gohary
+Student ID: 300937424
+Description: Assignment2
+Date: 04/05,2019
+Reference: Tom Tsiliopoulos's Class Demo, Github Repo's
+All codes are taken from Tom Tsiliopoulos's classes and demos
+*/
 #login {
   width:450px;
   margin-left: auto;
