--- a/client/src/app/contacts/contact-details/contact-details.component.html
+++ b/client/src/app/contacts/contact-details/contact-details.component.html
@@ -1,5 +1,6 @@
  <!-- Content for the Details Page -->
-<div class="container">
+<div id="divSpace">
+<div id="contactDetails">
   <div class="row">
       <div class="col-md-offset-3 col-md-6">
           <h1>{{ title }}</h1>
@@ -38,13 +39,14 @@
                   required>
               </div>
 
-              <button type="submit" class="btn btn-primary">
+              <button type="submit" class="btn btn-primary" id="bntSubmit">
               <i class="fas fa-edit"></i> {{ title }}</button>
-              <a routerLink="/contact/contact-list" class="btn btn-warning">
-                  <i class="fas fa-undo"></i> Cancel</a>
+              <a routerLink="/contact/contact-list" class="btn btn-warning" id="btnCancel">
+                  <i class="fas fa-undo" ></i> Cancel</a>
           </form>
 
 
       </div>
   </div>
+</div>
 </div>
